Commit and Update This repo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     li#sign-in {
         background-color: #e50914;
         line-height: normal;
-        padding: 10px;
+        padding: 20px 10px;
         font-weight: 400;
         font-size: 1rem;
         border-radius: 4px;
