--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Netflix Movies</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <style>
     body {
       background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/2a67d7bb-5681-490a-8515-c7e322c6255e/7ee6ac19-9946-4d7d-9b6a-a4be31b230a7/NG-en-20191209-popsignuptwoweeks-perspective_alpha_website_small.jpg");
       background-position: top;
       background-size: cover;
+      height: 100%;
     }
 
     body::before {
@@ -26,12 +28,18 @@
 
     h1, h2 {
       color: white;
-      font-family: "Helvetica Neue", Arial, sans-serif;
+      font-family: 'Roboto', sans-serif;
       text-align: center;
     }
 
     h1 {
-      font-size: 50px;
+      font-size: 40px;
+    }
+
+    h2 {
+      width: 100%;
+      padding-top: 0px;
+      font-weight: 300;
     }
 
     img {
@@ -79,7 +87,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      margin-top: 180px
+      margin-top: 200px
     }
   </style>
 </head>
